@@ -77,7 +77,8 @@
       form = $(form);
       var inputs = form.getElementsByTagName('input');
 
-      if (!typeName && !name) return $A(inputs).map(Element.extend);
+      if (!typeName && !name)
+        return nodeListSlice.call(inputs, 0).map(Element.extend);
 
       for (var i = 0, matchingInputs = [], length = inputs.length; i < length; i++) {
         var input = inputs[i];
